front-end changes

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -47,6 +47,9 @@
                       <p id="gb-blue-points">0</p>
                       <p style="font-size:12px;margin-top: -40px">points</p>
                   </div>
+                  <div id="gameboard-add-manual-detection-div" style="display:none">
+                      <br><button type="button" class="atomic-button" id="open-verify-modal" onclick="document.getElementById('verify-detection-modal').style.display='block'">+ Add External Detection</button>
+                  </div>
               </div>
               <div class="gameboard-column side"></div>
             </div>
