move analytic button

--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -27,6 +27,7 @@
              </select>
             <p id="blue-status" class="status" style="display: None"></p>
             <br>
+            <button class="button-success button-atomic" id="elastic-op" onclick="openAnalyticModal()">Custom Analytic</button>
             <button class="button-success button-atomic" onclick="refresh()">Refresh</button>
         </div>
         <div id="the-gameboard" class="column">
@@ -40,7 +41,6 @@
               </div>
               <div class="gameboard-column mid">
                   <h3>Process</h3>
-                  <button class="button-success button-atomic" id="elastic-op" onclick="openAnalyticModal()">Custom Analytic</button>
               </div>
               <div class="gameboard-column">
                   <div class="scoreboard-points scoreboard-blue">
@@ -50,7 +50,7 @@
               </div>
               <div class="gameboard-column side"></div>
             </div>
-            <div id="exchanges" onclick="openAnalyticModal()" style="margin: 10px 0px;"></div>
+            <div id="exchanges" style="margin: 10px 0px;"></div>
         </div>
     </div>
 </div>
