--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -120,6 +120,10 @@
                             <td style="width:10%"><b>Command:</b></td>
                             <td><pre id="piece-cmd" style="margin: 10px 0px;"></pre></td>
                         </tr>
+                        <tr>
+                            <td style="width:10%"><b>Output:</b></td>
+                            <td><pre id="piece-output" style="margin: 10px 0px;"></pre></td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
