--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -117,6 +117,8 @@
                             <td>
                                 <input class="pin" type="text" id="piece-pin" placeholder="PID">
                                 <div style="padding: 10px 0px; display: none" id="piece-pid"></div>
+                                <input id="childpid-checkbox" type="checkbox" value="childpid" style="width: 20px;margin-left: 40px">
+                                <label for="childpid-checkbox">Child PID</label><br>
                             </td>
                         </tr>
                         <tr>
