--- a/templates/gameboard.html
+++ b/templates/gameboard.html
@@ -232,6 +232,39 @@
     </div>
 </div>
 
+<div id="pin-blue-link-modal" class="modal" style="display: block">
+    <div class="modal-content" style="width:60%">
+        <div class="container">
+            <div class="row duk-modal" style="display:block">
+                <div onclick="document.getElementById('pin-blue-link-modal').style.display='none'">
+                    <span class="close" title="Close Modal">&times;</span>
+                </div>
+                <div id="pin-blue-link-form" class="row-simple" style="width:100%"></div>
+                <div id="match-parent-link-form" class="row-simple" style="width:100%">
+
+                    <div class="column" style="width:75%;margin-bottom:-35px">
+                        Select the correct ability to match with.
+                        <div id="parent-links" class="column" style="flex:60%">
+                            <div id="parent-link-123456" style="display:flex;align-items:center; ">
+                                <div class="link-command" style="width:78%; display:flex; align-items:center">
+                                    Some test command
+                                </div>
+                                <div type="button" class="button-success atomic-button" style="width:19%; display:flex; align-items:center; justify-content:center">Select</div>
+                            </div>
+                            <div id="parent-link-2222" style="display:flex;align-items:center; ">
+                                <div class="link-command" style="width:78%; display:flex; align-items:center">
+                                    Some test command
+                                </div>
+                                <div type="button" class="button-success atomic-button" style="width:19%; display:flex; align-items:center; justify-content:center">Select</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="analytic-op-modal" class="modal">
     <div class="modal-content ability-viewer">
         <div class="imgcontainer">
